[gd_scene load_steps=3 format=3 uid="uid://c0o7ea35j478t"]

[ext_resource type="Script" uid="uid://bj0quajjxlvql" path="res://main.gd" id="1_8kdot"]
[ext_resource type="AudioStream" uid="uid://by66nq2unymty" path="res://mouse-click-198485.mp3" id="2_el4ax"]

[node name="Main" type="Node2D"]
script = ExtResource("1_8kdot")

[node name="Button" type="Button" parent="."]
offset_left = 350.0
offset_top = 326.0
offset_right = 795.0
offset_bottom = 518.0
text = "Hacer click"

[node name="Label" type="Label" parent="."]
offset_left = 508.0
offset_top = 104.0
offset_right = 819.0
offset_bottom = 245.0
text = "Clicks: 0"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_el4ax")

[node name="Economia" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 971.0
offset_top = 27.0
offset_right = 1011.0
offset_bottom = 67.0

[node name="ComprarBtn" type="Button" parent="CanvasLayer"]
offset_left = 885.0
offset_top = 37.0
offset_right = 1107.0
offset_bottom = 99.0

[node name="Label" type="Label" parent="CanvasLayer/ComprarBtn"]
layout_mode = 0
offset_left = 26.0
offset_top = 8.0
offset_right = 195.0
offset_bottom = 57.0
text = "Alien           25 Clicks
1 click automatico p/s"

[node name="CompreAviso" type="Label" parent="."]
offset_left = 473.0
offset_top = 39.0
offset_right = 593.0
offset_bottom = 74.0

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ComprarBtn" to="." method="_on_comprar_btn_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
